--- a/SpaceX.ipynb
+++ b/SpaceX.ipynb
@@ -9,11 +9,18 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "e319ca58-cb16-48ea-acb7-06b7350652f6",
    "metadata": {},
    "source": [
-    "text here"
+    "In the growing commercial 9 space industry, Space Y aims to compete with SpaceX, which has reduced launch costs by reusing the first stage of its Falcon rockets. \n",
+    "\n",
+    "Problems I want to find answers to\n",
+    "\n",
+    "1. Predicting Launch Costs: How can we estimate the cost of a SpaceX launch based on various factors, particularly the reusability of the first stage?\n",
+    "\n",
+    "2. Predicting First Stage Reuse: Can we accurately predict whether the first stage of the Falcon 9 rocket will land successfully and be reused based on public data?"
    ]
   },
   {
@@ -1213,7 +1220,12 @@
    "cell_type": "code",
    "execution_count": 100,
    "id": "cb69e1a7-f339-43f8-8638-9f556338de85",
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -1242,8 +1254,20 @@
     "            y= 'LaunchSite',\n",
     "            hue= 'Class',\n",
     "            data =data_falcon9)\n",
-    "plt.title('Flight Number vs. Launch Site')"
+    "plt.title('Flight Number vs. Launch Site')\n",
+    "\n",
+    "#CCAFS SLC 40: The failure ratio decreases as the number of flights increases.\n",
+    "#VAFB SLC 4E: Characterized by a small number of flights, with a high success ratio.\n",
+    "#KSC LC 39A: Majority of launches occur after 20 flights, with a higher proportion of successful launches.\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bd3752c0-cac9-462f-9b11-13978daeae1b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -1278,7 +1302,11 @@
     "            y= 'LaunchSite',\n",
     "            hue ='Class',\n",
     "            data =data_falcon9)\n",
-    "plt.title('Payload vs. Launch Site')"
+    "plt.title('Payload vs. Launch Site')\n",
+    "\n",
+    "#CCAFS SLC 40: rockets with a payload mass greater than 12500 are launched successfully \n",
+    "#VAFB-SLC 4E: No rockets are launched for heavy payload mass (greater than 10000)\n",
+    "#KSC LC 39A: no light mass rockets (smaller than 2500) are launched\n"
    ]
   },
   {
@@ -1320,7 +1348,9 @@
     "            y= 'Orbit',\n",
     "            data =or_suc,\n",
     "           orient = 'h')\n",
-    "plt.title('Success Rate vs. Orbit Type')"
+    "plt.title('Success Rate vs. Orbit Type')\n",
+    "\n",
+    "#ES-L1, GEO, HEO, and SSO have the highest success rate"
    ]
   },
   {
@@ -1356,7 +1386,11 @@
     "            y= 'Orbit',\n",
     "            hue = 'Class',\n",
     "           data=data_falcon9)\n",
-    "plt.title('Flight Number vs. Orbit Type')"
+    "plt.title('Flight Number vs. Orbit Type')\n",
+    "\n",
+    "#In the LEO orbit, Success appears to be related to the number of flights\n",
+    "#Сonversely, there seems to be no relationship between flight numbers when in GTO orbit.\n",
+    "#SO orbit has only one failed launch \n"
    ]
   },
   {
@@ -1392,7 +1426,10 @@
     "            y='Orbit',\n",
     "            hue ='Class',\n",
     "            data=data_falcon9)\n",
-    "plt.title('Payload vs. Orbit Type')"
+    "plt.title('Payload vs. Orbit Type')\n",
+    "\n",
+    "#When carrying large payloads, the successful landing or favorable landing rate is higher for Polar, LEO, and ISS missions.\n",
+    "#Nevertheless, for GTO, we struggle to differentiate clearly since both successful landing rates and unsuccessful landings are present in this context.\n"
    ]
   },
   {
@@ -1452,7 +1489,10 @@
     "sns.lineplot(x='Year',\n",
     "            y= 'Class',\n",
     "             data=stat_year)\n",
-    "plt.title('Launch Success Yearly Trend')"
+    "plt.title('Launch Success Yearly Trend')\n",
+    "\n",
+    "#The success rate increased steadily from 2013 to 2017, remaining stable in 2014. \n",
+    "#After 2015, it continued to rise but saw a decrease in 2018.\n"
    ]
   },
   {
@@ -1621,7 +1661,16 @@
     "                               \n",
     "# Run the app\n",
     "if __name__ == '__main__':\n",
-    "    app.run(port=8051)\n"
+    "    app.run(port=8051)\n",
+    "\n",
+    "\n",
+    "#The site with the highest number of launch successes is KSC LC-39A. \n",
+    "#The second is CCAFS LC-40.\n",
+    "#KSC LC-39A has achieved 10 successes out of 13 attempts, representing 76.9% of successful launches.\n",
+    "#Heavy booster versions (with payload mass over 6000 kg) often experience launch failures. \n",
+    "#Middle booster versions (between 2500 and 5000 kg) have the highest success rate.\n",
+    "#FT and B4 are the most successful versions \n",
+    "\n"
    ]
   },
   {
@@ -2221,6 +2270,21 @@
     "\n",
     "# show\n",
     "plt.show()\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "79f43ed7-cacc-44d0-88ab-6824ab466186",
+   "metadata": {},
+   "source": [
+    "Results:\n",
+    "\n",
+    "•Extremely light or heavy rockets are more likely to fail during launch.\n",
+    "\n",
+    "•As the number of flights of the first stage of the Falcon 9 rocket increases, the rate of failed launches decreases. \n",
+    "\n",
+    "•Our model accurately predicts whether the first stage of the Falcon 9 rocket will land successfully."
    ]
   }
  ],
